# convergence-games

./: .dockerignore  .gitattributes  .gitignore  .prettierrc.json  CLAUDE.md  CNAME  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  component_hinting_helper.py  compose.dev.yml  compose.override.yml  compose.yaml  compose.yml  docker-bake.hcl  docker_build_and_push.sh  docker_build_and_push_dev.sh  fly.dev.toml  fly.prod.toml  fly.toml  index.html  jinjax-components.html-data.json  package-lock.json  package.json  pyproject.toml  style.css  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
.claude/commands/: task-plan.md
.claude/rules/: python-litestar.md  python-models.md  python-style.md  python-testing.md  python-types.md
.github/: FUNDING.yml
.github/workflows/: fly-deploy.yml
.tasks/: README.md  TEMPLATE.md
.tasks/access-refresh-token-split/: plan.md
.tasks/auth-flow-separation/: plan.md
.tasks/create-mock-event-script/: plan.md
.tasks/event-time-spans/: plan.md
.tasks/faq-markdown-templating/: plan.md
.tasks/fly-io-hosting/: plan.md
.tasks/games-table-view/: plan.md
.tasks/improve-image-upload-feedback/: plan.md
.tasks/multi-event-support/: plan.md
.tasks/session-attendance-history/: plan.md
.tasks/sqid-to-kebab-case-slugs/: plan.md
.tasks/structlog-sentry-logging/: plan.md
azure/: entrypoint.sh
convergence_games/: __init__.py  settings.py
convergence_games/algorithm/: game_allocator.py  game_allocator_2.py  game_allocator_new.py
convergence_games/analysis/: exploration.ipynb
convergence_games/app/: __init__.py  alerts.py  app.py  common.py  constants.py  context.py  dependencies.py  events.py  exceptions.py  extra_models.py  genre_gradients.py  genre_gradients.txt  guards.py  htmx_block_template.py  main.py  paths.py  request_type.py  response_type.py  style.css  templates.py
convergence_games/app/app_config/: __init__.py  compression_config.py  dependencies.py  exception_handlers.py  htmx_plugin.py  init_sentry.py  jwt_cookie_auth.py  logging_config.py  mock_authentication_middleware.py  openapi_config.py  sqlalchemy_plugin.py  static_files_router.py  template_config.py  user_plugin.py
convergence_games/app/common/: auth.py  jwt_multi_cookie.py
convergence_games/app/lib/: editor.ts  index.ts
convergence_games/app/routers/: __init__.py  games.py  health.py  main.py  my_sessions.py  people.py
convergence_games/app/services/: common_auth.py
convergence_games/app/shared/: __init__.py  do_allocation.py
convergence_games/app/static/: test.txt
convergence_games/app/tailwindcss/: package-lock.json  package.json  tailwind.config.js
convergence_games/app/templates/: base.html.jinja  index.html.jinja  index.ts
convergence_games/db/: base_data.py  create_mock_data.py  enums.py  extra_types.py  models.py  ocean.py  postgresql_to_sqlite_backup.py  session.py  sheets_importer.py  slugs.py
convergence_games/logging/: __init__.py  config.py  middleware.py  processors.py
convergence_games/migrations/: env.py  script.py.mako
convergence_games/migrations/versions/: 2025-07-31_add_facilities_to_table_and_room_75fd2d155fe3.py  2025-07-31_add_table_size_to_table_634c88dabfb5.py  2025-07-31_facilities_7de684f3a3b4.py  2025-08-03_add_committed_to_session_13fc4b8d9adf.py  2025-08-06_add_usergamepreference_table_372f89c58906.py  2025-08-09_add_parties_ad2d2d4ccbc1.py  2025-08-09_on_delete_cascade_for_party_user_link_7c2516b45813.py  2025-08-12_add_max_party_size_to_event_2db24a12c1e1.py  2025-08-13_remove_invite_code_from_party_414cac901d0d.py  2025-08-18_replace_user_event_status_with__a679c863faeb.py  2025-08-19_add_time_slot_status_and_checkin_time_8c97a1fd0593.py  2025-08-19_add_usercheckinstatus_ebd74d6a00b4.py  2025-08-23_remove_user_login_unique_constraint_2556d65374f1.py  2025-08-31_add_le_index_2d695ef1feed.py  2025-09-07_add_allocation_table_a9734f9abf91.py  2025-09-07_add_frozen_at_time_slot_id_to_user_game__bb8d9e0cab15.py  (+7 more)
convergence_games/permissions/: __init__.py  permissions.py
convergence_games/services/: __init__.py
convergence_games/utils/: time_utils.py  user_agent.py
docs/: EDITING_FAQ.md
guides/: user_guide.md
mock_data/: Mock Convergence Data - GMs.csv  Mock Convergence Data - Games.csv  Mock Convergence Data - Tables.csv
scripts/: build_and_push  build_faq.py  create_all_app_metadata.py  create_azure_blob_sp.sh  create_mock_event.py  dump_fixtures.py  find_duplicate_users.py  import_fixtures.py  run_in_docker.sh
ssh_entrypoint/: entrypoint.sh
static/css/: style.css
tests/: conftest.py
tests/db/: test_slugs.py
tests/logging/: test_logging_config.py  test_middleware.py
tests/scripts/: test_build_faq.py
tests/utils/: test_email.py  test_user_agent.py
working/: context_vars.py  database_creation.py
(+201 files in other folders)
