[project]
name = "convergence-games"
version = "0.1.0"
description = ""
authors = [
    { name = "Jacob Cheatley", email = "jacobcheatley@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "jinja2>=3.1.4",
    "jinja2-fragments>=1.6.0",
    "jinjax>=0.46",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "uvicorn[standard]>=0.32.0",
    "sqids>=0.5.0",
    "sqlalchemy>=2.0.36",
    "litestar[jinja,jwt,sqlalchemy]>=2.12.1",
]

[project.urls]
homepage = "https://convergence.waikatorpg.co.nz"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.385",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "ignore",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults - too many false positives especially with FastAPI
    "E501",  # Line too long - handled by ruff formatter
]

[tool.pyright]
reportPrivateImportUsage = "none"
