[project]
name = "convergence-games"
version = "0.1.0"
description = ""
authors = [
    { name = "Jacob Cheatley", email = "jacobcheatley@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx-oauth>=0.16.1",
    "jinja2-fragments>=1.7.0",
    "jinja2>=3.1.5",
    "jinjax>=0.48",
    "litestar[brotli,jinja,jwt,sqlalchemy]>=2.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "python-jose>=3.3.0",
    "sqids>=0.5.1",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[project.urls]
homepage = "https://convergence.waikatorpg.co.nz"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "ignore",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults - too many false positives especially with FastAPI
    "E501",  # Line too long - handled by ruff formatter
]

[tool.pyright]
reportPrivateImportUsage = "none"
