[project]
name = "convergence-games"
version = "0.1.0"
description = ""
authors = [
    { name = "Jacob Cheatley", email = "jacobcheatley@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx-oauth>=0.16.1",
    "jinja2-fragments>=1.7.0",
    "jinja2>=3.1.5",
    "jinjax>=0.48",
    "litestar[brotli,jinja,jwt,sqlalchemy]>=2.16.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "rapidfuzz>=3.12.1",
    "sentry-sdk[litestar]>=2.26.1",
    "sqids>=0.5.1",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
    "humanize>=4.12.2",
    "pillow>=11.2.1",
    "aiofiles>=24.1.0",
    "azure-identity>=1.23.0",
    "azure-storage-blob[aio]>=12.25.1",
    "advanced-alchemy>=1.4.3",
    "alembic>=1.15,<1.16",
]

[project.urls]
homepage = "https://convergence.waikatorpg.co.nz"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.3.4",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    ".venv"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults - too many false positives especially with FastAPI
    "E501",  # Line too long - handled by ruff formatter
]

[tool.pyright]
reportPrivateImportUsage = "none"
